MODROLESKC-409  Incorrect "totalRecords" value in "GET /roles/users?query=..." API response (#392)